--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>الصفحة الرئيسية</title>
+  <title>عن الموقع</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>موقعي البسيط</h1>
+    <h1>عن الموقع</h1>
     <nav>
       <a href="index.html">الرئيسية</a>
       <a href="about.html">عن الموقع</a>
@@ -19,9 +19,15 @@
 
   <main>
     <section>
-      <h2>أهلًا وسهلًا</h2>
-      <p>هذا موقع تجريبي بسيط مكوّن من أربع صفحات HTML مترابطة.</p>
-      <p>تصفح الروابط في الأعلى للتعرف على الموقع أو لإرسال تعليق.</p>
+      <h2>هدف الموقع</h2>
+      <p>يهدف هذا الموقع إلى عرض مثال عملي لربط صفحات HTML معًا.</p>
+      <h3>محتويات</h3>
+      <ul>
+        <li>صفحة رئيسية للتعريف السريع.</li>
+        <li>صفحة تعريفية عن الموقع.</li>
+        <li>صفحة تواصل.</li>
+        <li>صفحة لإضافة التعليقات وحفظها محليًا.</li>
+      </ul>
     </section>
   </main>
 
